# crm_smart

./: .gitignore  Module_Task_List.md  Outreach_OS.dc.html  PRODUCT.md  README.md  Template Status Design.md  req.txt  start.sh  user_design.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: campaigns.py  companies.py  contacts.py  dashboard.py  health.py  imports.py  inbox.py  mailboxes.py  progress.py  system.py  templates.py
backend/app/core/: config.py
backend/app/schemas/: campaigns.py  companies.py  contacts.py  dashboard.py  health.py  imports.py  inbox.py  mailboxes.py  progress.py  system.py  templates.py
backend/app/services/: seed_data.py
backend/tests/: test_foundation_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/__tests__/: app.test.tsx
