[project]
name = "outreach-os-backend"
version = "0.1.0"
description = "FastAPI backend for Outreach OS"
requires-python = ">=3.12"
dependencies = [
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.0",
  "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
